# rustresort

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
.agent/workflows/: implementation-plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml  local.toml.example
docs/: ACTIVITYPUB_INTEGRATION_PLAN.md  ACTIVITY_PROCESSING_2026-01-12.md  API.md  API_SCHEMA_TEST_REPORT.md  API_SCHEMA_VALIDATION.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_MIDDLEWARE_IMPLEMENTATION.md  BACKUP.md  CLOUDFLARE.md  DATABASE.md  DATABASE_PERFORMANCE_ANALYSIS.md  DATABASE_PERFORMANCE_IMPROVEMENTS.md  DATA_MODEL.md  DECIDE_PERSISTENCE_SPEC_CHANGE_2026-01-12.md  DEVELOPMENT.md  E2E_TEST_IMPLEMENTATION.md  E2E_TEST_REPORT_UPDATED.md  FEDERATION.md  FEDERATION_IMPLEMENTATION_2026-01-12.md  FEDERATION_PHASE2_2026-01-12.md  FEDERATION_PHASE2_SUMMARY.md  FEDERATION_QUICK_REFERENCE.md  FUTURE_IMPLEMENTATION_ROADMAP.md  INDEX.md  MASTODON_API_FINAL_REPORT_2026-01-11.md  METRICS.md  METRICS_ADVANCED.md  METRICS_IMPLEMENTATION.md  NEXT_SESSION_GUIDE.md  OUTBOUND_SIGNATURES_2026-01-12.md  PHASE3_SEARCH_COMPLETE.md  README.md  ROADMAP.md  RSA_8192_ANALYSIS.md  RSA_KEY_SPEC.md  SCHEMA_MIGRATION_REPORT.md  SCHEMA_TESTING_QUICKREF.md  SCHEMA_TESTING_SUMMARY.md  SESSION_SUMMARY_2026-01-11.md  (+4 more)
examples/: federation_complete.rs  metrics_instrumentation.rs  prometheus.yml
migrations/: 001_initial.sql  002_oauth.sql  003_blocks_mutes_lists_filters.sql  004_polls_scheduled_conversations.sql  005_hashtags_fts.sql  006_oauth_authorization_codes.sql  007_oauth_token_grant_type.sql  008_follow_address_nocase_indexes.sql  009_status_create_idempotency.sql  010_security_perf_hardening.sql  011_oauth_access_token_hash_migration_state.sql  012_status_features.sql  013_oauth_token_expiration.sql  014_media_attachment_focus.sql  015_oauth_apps_vapid_key.sql  README.md
scripts/: extract_schemas.py
scripts/ci/: run_e2e_shard.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: activitypub.rs  admin.rs  converters.rs  dto.rs  metrics.rs  mod.rs  oauth.rs  wellknown.rs
src/api/mastodon/: accounts.rs  admin.rs  apps.rs  bookmarks.rs  conversations.rs  federation_delivery.rs  filters.rs  instance.rs  lists.rs  media.rs  mod.rs  notifications.rs  polls.rs  scheduled_statuses.rs  search.rs  statuses.rs  streaming.rs  timelines.rs
src/auth/: middleware.rs  mod.rs  oauth.rs  session.rs
src/data/: cache.rs  database.rs  database_test.rs  mod.rs  models.rs  sync.rs
src/federation/: activity.rs  delivery.rs  key_cache.rs  mod.rs  rate_limit.rs  signature.rs  webfinger.rs
src/service/: account.rs  mod.rs  status.rs  timeline.rs
src/storage/: backup.rs  media.rs  mod.rs
tests/: README.md  e2e_account.rs  e2e_activitypub.rs  e2e_api_coverage.rs  e2e_auth.rs  e2e_federation_scenarios.rs  e2e_health.rs  e2e_mastodon_api.rs  e2e_oauth_authorization_code.rs  e2e_oauth_scope_enforcement.rs  e2e_status.rs  e2e_timeline.rs  e2e_wellknown.rs  schema_validation.rs
tests/common/: mod.rs  schema_validator.rs
tests/fixtures/: test_private_key.pem  test_public_key.pem
tests/schemas/: README.md  account.json  application.json  attachment.json  card.json  context.json  conversation.json  emoji.json  filter_v1.json  filter_v2.json  instance.json  list.json  media_attachment.json  notification.json  poll.json  relationship.json  scheduled_status.json  status.json  tag.json
